<resources>
    <string name="app_name">家庭智慧健康</string>
    <string name="response_no_data">没有数据！</string>
    <string name="response_no_more_data">没有更多数据!</string>
    <string name="response_loading_failed">数据加载失败!</string>
    <string name="response_exception">网络异常，请重试！</string>
    <string name="response_delete_success">数据删除成功!</string>
    <string name="response_delete_failed">数据删除失败!</string>
    <string name="response_submit_success">数据提交成功!</string>
    <string name="response_submit_failed">数据提交失败!</string>
    <string name="com_exit_app">再按一次退出程序</string>
    <string name="com_submit">提交</string>
    <string name="com_add">添加</string>
    <string name="com_delete">删除</string>
    <string name="com_complete">完成</string>
    <string name="com_download">立即下载</string>
    <string name="com_input_hint">请输入&#8230;</string>
    <string name="com_redo">重新辨识</string>
    <string name="com_family_members">家庭成员</string>
    <string name="com_select_family_members">选择家庭成员</string>
    <string name="guide_page_title">引导页</string>
    <string name="preview_txt">预览</string>
    <string name="consult_main_title">远程咨询</string>
    <string name="records_basic_info">基本信息</string>
    <string name="records_username">姓名</string>
    <string name="records_gender">性别</string>
    <string name="records_gender_m">男</string>
    <string name="records_gender_w">女</string>
    <string name="records_age">年龄</string>
    <string name="records_height">身高</string>
    <string name="records_weight">体重</string>
    <string name="records_area">地区</string>
    <string name="records_phone">联系电话</string>
    <string name="records_health_info">健康信息</string>
    <string name="records_blood_type">血型</string>
    <string name="records_allergy">药物过敏史</string>
    <string name="records_past_history">既往病史</string>
    <string name="records_hereditary">遗传病史</string>
    <string name="records_problem">健康问题</string>
    <string name="records_problem_hint">请输入您的健康问题</string>
    <string name="case_history">病例信息</string>
    <string name="add_case_history_type">病例类型</string>
    <string name="add_case_history_explain">说\t\t明</string>
    <string name="headlth_assessment">问卷信息</string>
    <string name="drug_remind">用药提醒</string>
    <string name="drug_name">药品名称：</string>
    <string name="drug_name_hint">请输入药名名称</string>
    <string name="take_dosage">服用剂量：</string>
    <string name="take_dosage_hint">请输入服用剂量</string>
    <string name="drug_name_dose">药名剂量</string>
    <string name="drug_name_dose_hint">请输入药名及剂量</string>
    <string name="start_time">开始日期</string>
    <string name="start_time_hint">请输入开始日期</string>
    <string name="end_time">结束日期</string>
    <string name="end_time_hint">请输入结束日期</string>
    <string name="time">12:00</string>
    <string name="date">2015&#8211;02&#8211;22</string>
    <string name="add_alarm_clock">添加闹钟</string>
    <string name="add_drug_dose">添加药品</string>
    <string name="remind_time">提醒时刻</string>
    <string name="remarks">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注</string>
    <string name="remarks_hint">请输入备注</string>
    <string name="monitor_main_title">家庭看护</string>
    <string name="dev_add_info">用户信息</string>
    <string name="dev_add_member">家庭成员</string>
    <string name="dev_add_device_name">设备名称</string>
    <string name="dev_add_device_name_hint">请输入设备名称</string>
    <string name="dev_add_device_id">设备串号</string>
    <string name="dev_add_device_id_hint">请输入设备串号</string>
    <string name="dev_list_info">设备信息</string>
    <string name="archives_Image_view_description">头像说明</string>
    <string name="archives_main_title">家庭档案</string>
    <string name="archives_user_name">姓名</string>
    <string name="archives_user_sex">性别</string>
    <string name="archives_user_age">年龄</string>
    <string name="health_main_title">健康检查</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
    <string name="conn_configuration">请先配置您的串行端口！</string>
    <string name="conn_security">您不具有读/写权限的串行端口!</string>
    <string name="conn_not_open">串行端口未能被打开！</string>
    <string name="health_com_tip">温馨提示</string>
    <string name="health_com_tip_null">暂无提示！</string>
    <string name="health_com_suggest">建议</string>
    <string name="health_com_suggest_null">暂无建议！</string>
    <string name="health_com_history">历史数据</string>
    <string name="health_com_conclusion_tip">测量结论：</string>
    <string name="health_com_conclusion_tip_null">暂无结论！</string>
    <string name="glu_title">血糖测量</string>
    <string name="glu_code">血糖CODE码：%1$s</string>
    <string name="glu_code_def">血糖预设CODE码：%1$s</string>
    <string name="glu_result_tip">血糖测量结果</string>
    <string name="glu_meal_before">餐前</string>
    <string name="glu_meal_after">餐后</string>
    <string name="glu_meal_tip">正常范围：空腹在3.9~6.1mmol/L之间，餐后2小时小于7.8mmol/L</string>
    <string name="glu_detail_title">血糖测量详情</string>
    <string name="glu_history_title">血糖历史数据</string>
    <string name="dialog_title">引导说明</string>
    <string name="dialog_step1">第一步</string>
    <string name="dialog_step2">第二步</string>
    <string name="dialog_step3">第三步</string>
    <string name="dialog_bp_step1_des">请检查袖带气管是否正确连接主机</string>
    <string name="dialog_bp_step2_des">请按照正确方法佩戴好袖带</string>
    <string name="dialog_bp_step3_des">请点击打开按钮开始测量</string>
    <string name="dialog_ecg_step1_des">LA夹在左手</string>
    <string name="dialog_ecg_step2_des">RA夹在右手</string>
    <string name="dialog_ecg_step3_des">RL夹在右腿</string>
    <string name="bp_title">血压测量</string>
    <string name="bp_result_tip">血压测量结果</string>
    <string name="bp_sbp_title">收缩压</string>
    <string name="bp_sbp_result">高压：%1$d&#160;mpa</string>
    <string name="bp_sbp_tip">正常范围：90~140&#160;mmHg </string>
    <string name="bp_dbp_title">舒张压</string>
    <string name="bp_dbp_result">低压：%1$d&#160;mpa</string>
    <string name="bp_dbp_tip">正常范围：60~90&#160;mmHg</string>
    <string name="bp_detail_title">血压测量详情</string>
    <string name="bp_history_title">血压历史数据</string>
    <string name="ecg_title">心电测量</string>
    <string name="ecg_result_tip">心率测量结果</string>
    <string name="ecg_lead_tip_ra">RA导联脱落</string>
    <string name="ecg_lead_tip_la">LA导联脱落</string>
    <string name="ecg_analysis">心电采集</string>
    <string name="ecg_analysis_timer">正在采集(%1$ss)</string>
    <string name="ecg_ecg_title">心电图</string>
    <string name="ecg_hr_title">心率</string>
    <string name="ecg_hr_result">心率：%1$d&#160;次/每分钟</string>
    <string name="ecg_hr_tip">正常范围：50&#8211;120 bpm</string>
    <string name="ecg_amplitude">增益</string>
    <string name="ecg_marking">线宽</string>
    <string name="ecg_wavelength">波速</string>
    <string name="ecg_detail_title">心电测量详情</string>
    <string name="ecg_history_title">心电历史数据</string>
    <string name="spo2h_title">血氧测量</string>
    <string name="spo2h_result_tip">血氧测量结果</string>
    <string name="spo2h_probe_off">请将手指放入血氧探头</string>
    <string name="spo2h_upload">采集上传</string>
    <string name="spo2h_title_tip">血氧饱和度和脉率</string>
    <string name="spo2h_normal_tip_1">说明：</string>
    <string name="spo2h_normal_tip_2">1.血氧饱和度——血氧含量的正常数值在94%以上；\n2.脉&#160;率——正常成人范围在50~120bpm 之间的</string>
    <string name="spo2h_waveform_title">脉率波形</string>
    <string name="spo2h_detail_title">血氧测量详情</string>
    <string name="spo2h_history_title">血氧历史数据</string>
    <string name="temperature_title">体温测量</string>
    <string name="temperature_result_tip">体温测量结果</string>
    <string name="temperature_result">测量值：</string>
    <string name="temperature_tip">正常体温：36.0~37.5℃</string>
    <string name="temperature_detail_title">体温测量详情</string>
    <string name="temp_history_title">体温历史数据</string>
    <string name="health_help_title">帮助中心</string>
    <string name="album_title">家庭相册</string>
    <string name="bit_picture_title">查看大图</string>
    <string name="help_title">一键帮助</string>
    <string name="help_phone">4000&#8211;263203</string>
    <string name="location_main_title">定位追踪</string>
    <string name="location_devices">定位设备</string>
    <string name="services_main_title">生活服务</string>
    <string name="services_vedio">视频播放</string>
    <string name="services_entertain">娱乐天地</string>
    <string name="services_growup">成长关怀</string>
    <string name="entertain_title">娱乐天地标题</string>
    <string name="play_time">播放时长:120min</string>
    <string name="file_size">文件大小:6M</string>
    <string name="file_style">文件格式:.mp4</string>
    <string name="call_center_phone">18994*****789</string>
    <string name="call_center_name">呼叫中心</string>
    <string name="internet_radio_title">网络电台</string>
    <string name="category_title">电台类别选择</string>
    <string name="fm_title">本地FM</string>
    <string name="settings_main_title">本机设置</string>
    <string name="about_us_introduce">
        \t\t深圳吉祥星科技股份有限公司成立于1999年，是一家集产品设计 、研发、生产、销售于一体的计算机外围设备国家高新技术企业 ，公司拥有一支高素质的专业研发团队 ， 全身心致力于自主研发与创新，引进了国际市场核心先进技术和先进研发设备，研发成效硕果累累， 至今获得百余项专利著作权。企业核心员工1100余人，13000平米的现代化标准工业厂房的现代型企业坐落在深圳龙华大浪。2016年公司正式更名为深圳吉祥星科技股份有限公司。致力成为全球优秀的智慧生活整体解决方案服务商。
        \n\t\t主要经营产品有：智能平板电脑、智能手机、智能家居、智能穿戴、智能装备和移动健康设备。 第7895780号“爱立顺AOSON”商标2011年成功注册，在国内享有较高的声誉并巩固了一定的国内市场占有率。 公司主营产品销量在同行业不仅名列前茅，覆盖亚洲、欧洲、北美、非洲三十多个主要国家和地区市场，具有良好的品牌商业信誉。
        \n\t\t公司荟萃了一大批具有深厚专业理论和丰富实践经验的专注于数码电子信息产品方面的专家，与中国科技大学、广东工业大学等单位建立了长期的合作关系。公司凭籍高素质人才队伍，强大的技术研发能力，先进的生产、检测设备，优良的产品质量，完善的售后服务。相续通过ISO9002、ISO14001、ISO13485、ROHS、TS16949、CE/FCC等国际认证。
        \n\t\t基于在国内和国际产业市场上的优异表现，公司得到了国家和广东省、深圳市各级政府部门的大力支持。
        \n2008年5月公司被深圳市科技和信息局评为<b>“深圳市高新技术企业”</b>；
        \n2008年8月公司被深圳市科技和信息局认定为<b>“软件企业”</b>；
        \n2009年12月公司被国家科技部认定为<b>“国家高新技术企业”</b>；
        \n2010年7月被深圳市宝安区人民政府认定为<b>“宝安区总部企业”</b>；
        \n2013年6月被深圳市龙华新区评为<b>“2012年龙华新区民营企业50强”</b>；
        \n2013年6月被深圳市龙华新区评为<b>“龙华新区高新技术与战略性新兴产业50强”</b>；
        \n2013年11月获得<b>“深圳企业新记录”</b>；
        \n2014年1月获得<b>“深圳知名品牌”</b>称号；
        \n2011-2015连续5年获得<b>“广东省诚信示范企业”</b>；
        \n2015年10月深圳市龙华新区评为<b>“2014龙华新区自主创新100强”</b>；
        \n2015年10月深圳市龙华新区评为<b>“2014龙华新区工业100强”</b>。
        \n\t\t公司秉承“对自己，以身作则，全力以赴；对工作，主动担当，高效执行；对同事，尊重包容，感恩奉献；对客户，真诚服务，合作共赢。”的核心价值观，聚焦客户需求与挑战，提供优质、时尚、便捷的互联网电子产品与服务，用创新科技引领未来智能生活。
    </string>
    <string name="help_introduce_title">\t\t常见问题及解决办法</string>
</resources>