<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/style_match_match"
    android:background="@drawable/main_bg"
    android:paddingBottom="@dimen/padding_16"
    android:paddingLeft="@dimen/padding_40"
    android:paddingRight="@dimen/padding_40"
    android:paddingTop="@dimen/padding_16">

    <ImageView
        android:id="@+id/iv_top"
        style="@style/ImageView.Wrap_Wrap"
        android:contentDescription="@null"
        android:src="@drawable/main_top" />

    <LinearLayout
        style="@style/style_match_match"
        android:layout_above="@+id/iv_bottom"
        android:layout_below="@id/iv_top"
        android:layout_marginBottom="@dimen/layout_margin_16"
        android:layout_marginTop="@dimen/layout_margin_8"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/style_match_match"
            android:layout_marginEnd="@dimen/layout_margin_8"
            android:layout_marginRight="@dimen/layout_margin_8"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/ll_consult"
                style="@style/style_match_wrap"
                android:layout_marginBottom="@dimen/layout_margin_8"
                android:layout_weight="2"
                android:background="@android:color/white"
                android:onClick="onClick"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        style="@style/ImageView.Wrap_Wrap"
                        android:contentDescription="@null"
                        android:src="@drawable/main_consult_ic" />

                    <TextView
                        style="@style/ImageView.Wrap_Wrap"
                        android:layout_marginTop="@dimen/layout_margin_40"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_20"
                        android:text="@string/consult_main_title" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/ll_monitor"
                style="@style/style_match_wrap"
                android:layout_marginTop="@dimen/layout_margin_8"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:onClick="onClick"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        style="@style/ImageView.Wrap_Wrap"
                        android:contentDescription="@null"
                        android:src="@drawable/main_monitor_ic" />

                    <TextView
                        style="@style/ImageView.Wrap_Wrap"
                        android:layout_marginLeft="@dimen/layout_margin_16"
                        android:layout_marginStart="@dimen/layout_margin_16"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_20"
                        android:text="@string/monitor_main_title" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            style="@style/style_match_match"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:layout_marginRight="@dimen/layout_margin_8"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/ll_archives"
                style="@style/style_match_wrap"
                android:layout_marginBottom="@dimen/layout_margin_8"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:onClick="onClick"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/ImageView.Wrap_Wrap"
                        android:contentDescription="@null"
                        android:src="@drawable/main_archives_ic" />

                    <TextView
                        style="@style/ImageView.Wrap_Wrap"
                        android:layout_marginLeft="@dimen/layout_margin_12"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_20"
                        android:text="@string/archives_main_title" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/ll_health"
                style="@style/style_match_wrap"
                android:layout_marginTop="@dimen/layout_margin_8"
                android:layout_weight="2"
                android:background="@android:color/white"
                android:onClick="onClick"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        style="@style/ImageView.Wrap_Wrap"
                        android:contentDescription="@null"
                        android:src="@drawable/main_health_ic" />

                    <TextView
                        style="@style/ImageView.Wrap_Wrap"
                        android:layout_marginTop="@dimen/layout_margin_40"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_20"
                        android:text="@string/health_main_title" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            style="@style/style_match_match"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:layout_marginRight="@dimen/layout_margin_8"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/ll_album"
                style="@style/style_match_wrap"
                android:layout_marginBottom="@dimen/layout_margin_8"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:onClick="onClick"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        style="@style/ImageView.Wrap_Wrap"
                        android:contentDescription="@null"
                        android:src="@drawable/main_album_ic" />

                    <TextView
                        style="@style/ImageView.Wrap_Wrap"
                        android:layout_marginLeft="@dimen/layout_margin_8"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_20"
                        android:text="@string/album_title" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/ll_help"
                style="@style/style_match_wrap"
                android:layout_marginBottom="@dimen/layout_margin_8"
                android:layout_marginTop="@dimen/layout_margin_8"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:onClick="onClick"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        style="@style/ImageView.Wrap_Wrap"
                        android:contentDescription="@null"
                        android:src="@drawable/main_help_ic" />

                    <TextView
                        style="@style/ImageView.Wrap_Wrap"
                        android:layout_marginLeft="@dimen/layout_margin_8"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_20"
                        android:text="@string/help_title"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/ll_location"
                style="@style/style_match_wrap"
                android:layout_marginTop="@dimen/layout_margin_8"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:onClick="onClick"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        style="@style/ImageView.Wrap_Wrap"
                        android:contentDescription="@null"
                        android:src="@drawable/main_location_ic" />

                    <TextView
                        style="@style/ImageView.Wrap_Wrap"
                        android:layout_marginLeft="@dimen/layout_margin_8"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_20"
                        android:text="@string/location_main_title" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            style="@style/style_match_match"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/ll_service"
                style="@style/style_match_wrap"
                android:layout_marginBottom="@dimen/layout_margin_8"
                android:layout_weight="2"
                android:background="@android:color/white"
                android:onClick="onClick"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        style="@style/ImageView.Wrap_Wrap"
                        android:contentDescription="@null"
                        android:src="@drawable/main_service_ic" />

                    <TextView
                        style="@style/ImageView.Wrap_Wrap"
                        android:layout_marginTop="@dimen/layout_margin_40"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_20"
                        android:text="@string/services_main_title" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/ll_settings"
                style="@style/style_match_wrap"
                android:layout_marginTop="@dimen/layout_margin_8"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:onClick="onClick"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        style="@style/ImageView.Wrap_Wrap"
                        android:contentDescription="@null"
                        android:src="@drawable/main_settings_ic" />

                    <TextView
                        style="@style/ImageView.Wrap_Wrap"
                        android:layout_marginLeft="@dimen/layout_margin_8"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_20"
                        android:text="@string/settings_main_title" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_bottom"
        style="@style/ImageView.Wrap_Wrap"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:src="@drawable/main_copyright" />
</RelativeLayout>